--- a/index.html
+++ b/index.html
@@ -30,24 +30,22 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Carson VanderSchel</h1>
+        <h2>Junior in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a junior at Bob Jones University studying Sport Management. I work for the Bruins Men's Soccer Team as the Equipment Manager.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend Calvary Baptist Church in Simpsonville, SC. My favorite website is  
+            <a href="https://www.espn.com/">here</a>, and you can email me  
+            <a href="mailto:cvand530@bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy playing and watching all sports imaginable.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Sport Management<br />
         Bob Jones University<br />
         Example image:
-        <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
     </div>
 </body>
 </html>
