--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: lightgray;
     font-family: Verdana;
 }  
 #content {
-    background: lightyellow;
+    background: grayblue;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
